--- a/deconfig/jdcloud_ipq60xx_libwrt.config
+++ b/deconfig/jdcloud_ipq60xx_libwrt.config
@@ -176,8 +176,8 @@ CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
 CONFIG_PACKAGE_zerotier=y
 CONFIG_PACKAGE_luci-app-socat=y
-CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
-CONFIG_PACKAGE_socat=y
+#CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
+#CONFIG_PACKAGE_socat=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=y
 CONFIG_PACKAGE_apinger=y
 CONFIG_PACKAGE_apinger-rrd=y
