--- a/deconfig/jdcloud_ipq60xx_immwrt.config
+++ b/deconfig/jdcloud_ipq60xx_immwrt.config
@@ -167,7 +167,7 @@ CONFIG_PACKAGE_zerotier=y
 CONFIG_PACKAGE_luci-app-socat=y
 #CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
 CONFIG_PACKAGE_socat=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=y
 CONFIG_PACKAGE_apinger=y
 CONFIG_PACKAGE_apinger-rrd=y
 CONFIG_PACKAGE_luci-app-apinger=y
