--- a/deconfig/jdcloud_ipq60xx_immwrt.config
+++ b/deconfig/jdcloud_ipq60xx_immwrt.config
@@ -72,7 +72,7 @@ CONFIG_PACKAGE_luci-lib-ipkg=y
 CONFIG_PACKAGE_libopenssl-legacy=y
 
 # Package
-CONFIG_PACKAGE_easytier=y
+#CONFIG_PACKAGE_easytier=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_fuse-utils=y
 CONFIG_PACKAGE_ntfs3-mount=y
@@ -106,17 +106,17 @@ CONFIG_PACKAGE_libip6tc=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 
 # Enable Luci App
-CONFIG_PACKAGE_luci-app-adguardhome=y
-CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=n
+#CONFIG_PACKAGE_luci-app-adguardhome=y
+#CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=n
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-cupsd=m
 CONFIG_PACKAGE_luci-app-diskman=y
-CONFIG_PACKAGE_luci-app-dockerman=m
-CONFIG_PACKAGE_luci-app-easytier=y
-CONFIG_PACKAGE_luci-app-istorex=y
-CONFIG_PACKAGE_luci-app-lucky=y
-CONFIG_PACKAGE_luci-app-mosdns=y
-CONFIG_PACKAGE_luci-app-oaf=y
+#CONFIG_PACKAGE_luci-app-dockerman=m
+#CONFIG_PACKAGE_luci-app-easytier=y
+#CONFIG_PACKAGE_luci-app-istorex=y
+#CONFIG_PACKAGE_luci-app-lucky=y
+#CONFIG_PACKAGE_luci-app-mosdns=y
+#CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-quickfile=y
 CONFIG_PACKAGE_luci-app-samba4=y
 CONFIG_PACKAGE_luci-app-smartdns=y
@@ -127,3 +127,20 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-wol=y
 CONFIG_PACKAGE_luci-app-athena-led=m
 CONFIG_PACKAGE_luci-i18n-athena-led-zh-cn=m
+
+
+CONFIG_PACKAGE_ddns-scripts=y
+CONFIG_PACKAGE_ddns-scripts-cloudflare=y
+CONFIG_PACKAGE_ddns-scripts-services=y
+CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
+CONFIG_PACKAGE_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
+CONFIG_PACKAGE_zerotier=y
+CONFIG_PACKAGE_luci-app-socat=y
+#CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
+CONFIG_PACKAGE_socat=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=y
+CONFIG_PACKAGE_apinger=y
+CONFIG_PACKAGE_apinger-rrd=y
+CONFIG_PACKAGE_luci-app-apinger=y
