--- a/deconfig/jdcloud_ipq60xx_immwrt.config
+++ b/deconfig/jdcloud_ipq60xx_immwrt.config
@@ -135,9 +135,9 @@ CONFIG_PACKAGE_ddns-scripts-cloudflare=y
 CONFIG_PACKAGE_ddns-scripts-services=y
 CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
-#CONFIG_PACKAGE_luci-app-zerotier=y
-#CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
-#CONFIG_PACKAGE_zerotier=y
+CONFIG_PACKAGE_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
+CONFIG_PACKAGE_zerotier=y
 CONFIG_PACKAGE_luci-app-socat=y
 CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
 CONFIG_PACKAGE_socat=y
